# darkbot-ai-templates

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  frantic_evidence.json  install.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature_request.md  template-request.md
.github/workflows/: ci.yml  docker.yml  publish-all.yml  publish.yml  update-stats.yml
ab-testing-framework/: README.md
ab-testing-framework/src/: experiment.py
ab-testing-framework/tests/: test_experiment.py
ai-automation-template/: .env.example  README.md  agent.py  demo.py  requirements.txt
ai-automation-template/tests/: test_agent.py
api-gateway/: README.md
api-gateway/src/: gateway.py
api-gateway/tests/: test_gateway.py
api-key-manager/: README.md  demo.py
api-key-manager/src/: key_manager.py
api-key-manager/tests/: test_key_manager.py
async-task-runner/: README.md
async-task-runner/src/: runner.py
async-task-runner/tests/: test_runner.py
bounty-hunter-toolkit/: README.md  apply_fix.py  pyproject.toml
bounty-hunter-toolkit/tests/: test_apply_fix.py
cache-layer/: README.md
cache-layer/src/: cache.py
cache-layer/tests/: test_cache.py
captcha-solver-template/: .env.example  Dockerfile  README.md  demo.py  solver.py
captcha-solver-template/tests/: test_captcha.py
cdp-automation-template/: Dockerfile  README.md  cdp_agent.py  demo.py  requirements.txt
cdp-automation-template/tests/: test_cdp.py
cdp-toolkit/: README.md  demo.py  pyproject.toml
cdp-toolkit/src/: cdp_client.py
cdp-toolkit/tests/: test_cdp.py
cli-parser/: README.md
cli-parser/src/: parser.py
cli-parser/tests/: test_parser.py
config-validator/: README.md  demo.py
config-validator/src/: validator.py
config-validator/tests/: test_validator.py
content-generator/: README.md
content-generator/src/: generator.py
content-generator/tests/: test_generator.py
cron-scheduler/: README.md
cron-scheduler/src/: scheduler.py
cron-scheduler/tests/: test_scheduler.py
crypto-payment-template/: .env.example  Dockerfile  README.md  demo.py  gateway.py  requirements.txt
crypto-payment-template/tests/: test_payment.py
crypto-trading-bot/: .env.example  README.md  bot.py  demo.py  docker-compose.yml
crypto-trading-bot/tests/: test_trading.py
crypto-wallet-monitor/: README.md  demo.py
crypto-wallet-monitor/src/: monitor.py
crypto-wallet-monitor/tests/: test_monitor.py
darkbot-templates/: README.md  pyproject.toml
darkbot-templates/docs/: backpressure-load-shedding.md  cache-manager-ttl-lru.md  circuit-breaker-resilience.md  cli-parser-guide.md  config-loader-layers.md  connection-pool-reuse.md  cron-scheduler-guide.md  csv-processor-guide.md  docker-health-check-guide.md  email-sender-guide.md  file-watcher-guide.md  health-checker-probe.md  http-client-resilience.md  (+16 more)
db-migration-tool/: README.md  demo.py
di-container/: README.md
discord-bot-template/: .coverage  README.md  bot.py  demo.py  docker-compose.yml
docs/: 404.html  building-telegram-bots.md  catalog.html  categories.html  changelog.html  comparison.html  faq.html  getting-started.html  index.html  robots.txt  rss.xml  sitemap.xml  subscribe.html  use-cases.html  why-choose-us.html  zero-dep-python-templates.md
email-campaign-automation/: README.md  demo.py
email-scraper-template/: .env.example  README.md  demo.py  scraper.py
event-bus/: README.md
examples/: ai-automation-agency.md  defi-project.md  freelance-tg-bot.md  onion-deployment.md  scraping-service.md
fastapi-template/: .env.example  README.md  demo.py  docker-compose.yml  main.py  requirements.txt
feature-flags/: README.md
file-watcher/: README.md
health-check-monitor/: README.md  demo.py
html-template-engine/: README.md
json-rpc-server/: README.md
markdown-converter/: README.md
mcp-ab-tester/: README.md  pyproject.toml
mcp-ab-tester/src/: __init__.py  ab_tester_engine.py  server.py
mcp-ab-tester/tests/: test_ab_tester.py
mcp-eval-harness/: README.md  pyproject.toml
mcp-loop-detector/: README.md  pyproject.toml
mcp-prompt-versioning/: README.md  pyproject.toml
mcp-prompt-versioning/src/: __init__.py  prompt_versioning_engine.py  server.py
mcp-prompt-versioning/tests/: test_prompt_versioning.py
mcp-server-template/: .env.example  Dockerfile  Makefile  README.md  demo.py
mcp-skill-router/: README.md  pyproject.toml
mcp-token-budget/: LICENSE  README.md  pyproject.toml
mcp-tool-registry/: Dockerfile  README.md  pyproject.toml
metrics-collector/: README.md
n8n-workflow-template/: Dockerfile  Makefile  README.md  demo.py  export_workflow.py
notification-hub/: README.md  demo.py
oauth2-client/: README.md
onion-marketplace-script/: .env.example  Dockerfile  README.md  demo.py  marketplace.py
pagination-helper/: README.md
prompt-pack-template/: README.md  demo.py
proxy-rotation-template/: .env.example  Dockerfile  README.md  demo.py  rotator.py
rate-limiter-middleware/: README.md  demo.py
secret-manager/: README.md
security-audit-toolkit/: README.md  demo.py
solidity-template/: Makefile  README.md  demo.py  requirements.txt
state-machine/: README.md
task-queue-system/: README.md  demo.py
tests/: test_encrypt.py  test_health_checker.py  test_new_resilience.py
tg-bot-template/: README.md  bot.py  demo.py  docker-compose.yml  requirements.txt
tg-channel-scraper/: .env.example  README.md  demo.py  scraper.py
tor-hidden-service-template/: .env.example  Dockerfile  README.md  demo.py  setup.py
tor-market-scraper/: .env.example  README.md  demo.py  scraper.py
url-shortener/: README.md
web-scraper-pro/: README.md  demo.py
web-scraper-template/: .env.example  Dockerfile  README.md  demo.py  requirements.txt  scraper.py
webhook-server-template/: README.md  demo.py
websocket-server/: README.md
whatsapp-bot-template/: .env.example  Dockerfile  README.md  bot.py  demo.py  wa_node.js
(+147 files in other folders)
