[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cdp-toolkit"
version = "1.0.0"
description = "Chrome DevTools Protocol automation toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "AMEOBIUS"}]
keywords = ["cdp", "chrome", "automation", "browser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/AMEOBIUS/cdp-toolkit"
